feat: add path operation for deleting characters
Add a REST path operation for deleting a given number of characters in
the current cursor positon:
DELETE "/editing-sessions/{user_id}/{document_id}/{n}/"

Change the response HTTP status code when successful from 200 to 204 in
the path operation for writing characters:
POST "/editing-sessions/{user_id/{document_id}/"
